# ml-quantize

./: .gitignore  LICENSE  README.md  benchmark.py  compare_large_models.py  compare_models.py  example.py  model_comparison_readme.md  pyproject.toml  quick_test.py  requirements_comparison.txt  run_comparisons.sh
ml_quantize/: __init__.py  config.py  quantizer.py
model_comparison/: README.md
tests/: test_quantizer.py
